src/tests/snapshots/cendol__tests__pp_features__has_attribute.snap
---
source: src/tests/pp_features.rs
expression: setup_pp_snapshot(src)
---
- kind: Identifier
  text: no_aligned
