src/tests/snapshots/cendol__tests__pp_features__has_feature.snap
---
source: src/tests/pp_features.rs
expression: setup_pp_snapshot(src)
---
- kind: Identifier
  text: has_static_assert
- kind: Identifier
  text: has_generic_selection
- kind: Identifier
  text: no_non_existent
