src/tests/snapshots/cendol__tests__pp_features__has_include_next.snap
---
source: src/tests/pp_features.rs
expression: debug_tokens
---
- kind: Identifier
  text: found_next
- kind: Identifier
  text: final_header
